--- a/templates/coordinator/coordinator_dashboard.html
+++ b/templates/coordinator/coordinator_dashboard.html
@@ -357,6 +357,24 @@
                 Success Checkin
             </a>
         </li>
+                        <li>
+            <a href="#" onclick="loadContent('{% url 'part_qr_assign_list' %}')">
+                <i class="fa fa-list"></i> <!-- Font Awesome icon for 'View Participants' -->
+                QR Assignment
+            </a>
+        </li>
+                        <li>
+            <a href="#" onclick="loadContent('{% url 'part_qr_success_list' %}')">
+                <i class="fa fa-list"></i> <!-- Font Awesome icon for 'View Participants' -->
+                QR Checked
+            </a>
+        </li>
+{#                                <li>#}
+{#            <a href="#" onclick="loadContent('{% url 'part_qr_scan' %}')">#}
+{#                <i class="fa fa-list"></i> <!-- Font Awesome icon for 'View Participants' -->#}
+{#                Scan QR#}
+{#            </a>#}
+{#        </li>#}
 
     </ul>
 <div class="logout-button">
