Registration Page Update - added Note

--- a/templates/reg.html
+++ b/templates/reg.html
@@ -184,7 +184,13 @@
         .text-success {
             color: #4CAF50;
         }
-
+        p{
+            position: absolute;
+            color: white;
+            top: 0;
+            left: 70%;
+            font-size: 0.8rem;
+        }
         .text-danger {
             color: #f44336;
         }
@@ -210,6 +216,7 @@
 
 <body onload="move('extra')">
 <h1 style="text-align: center;">Registration Form</h1>
+<p>Note : You can move the container to any position on your screen using mouse</p>
 <form method="post">
 <div class="main-form">
     <div class="form-container">
