--- a/templates/coordinator/coordinator_dashboard.html
+++ b/templates/coordinator/coordinator_dashboard.html
@@ -131,7 +131,7 @@
 
 .dashboard-title {
     position: absolute;
-    top: 15%;
+    top: 22%;
     right: 50%;
     transform: translate(50%,-50%);
     text-transform: uppercase;
@@ -330,6 +330,29 @@
 .checkin-button:hover {
     background-color: #45a049;
 }
+.alert.alert-danger {
+    position: absolute;
+    left: 73%;
+    margin-bottom: 15px;
+    background: rgba(255,0,0,0.2);
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+}
+.alert.alert-success {
+    position: absolute;
+    left: 15%;
+    top: 3%;
+    margin-bottom: 15px;
+    background: rgba(0,255,0,0.2);
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+}
 
     </style>
 </head>
@@ -387,6 +410,15 @@
         </div>
 </div>
 <div class="content" id="content">
+            {% if messages %}
+            {% for message in messages %}
+<div class="container-fluid p-0">
+  <div class="alert {{ message.tags }}" role="alert" >
+    {{ message }}
+  </div>
+</div>
+{% endfor %}
+        {% endif %}
     <div class="content-scroll"> <!-- Add a wrapper for scrolling content -->
         <!-- Content for the selected page will be displayed here -->
         <div class="dashboard-content">
