--- a/templates/coordinator/qr_check.html
+++ b/templates/coordinator/qr_check.html
@@ -146,16 +146,17 @@ tbody td:hover:before {
 </div>
 {% endfor %}
         {% endif %}
+{% if coordinators %}
 <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for participants..." />
 
 <div class="container">
 <table>
   <thead>
     <tr>
+        <th>Participant ID</th>
       <th>Email</th>
       <th>First Name</th>
       <th>State</th>
-      <th>College</th>
       <th>Domain</th>
       <th>Team Name</th>
         <th>Status</th>
@@ -166,10 +167,10 @@ tbody td:hover:before {
   <tbody>
     {% for coordinator in coordinators %}
     <tr>
+        <td>{{ coordinator.participant_id }}</td>
       <td>{{ coordinator.email }}</td>
       <td>{{ coordinator.first_name }}</td>
         <td>{{ coordinator.state }}</td>
-        <td>{{ coordinator.college }}</td>
         <td>{{ coordinator.domain_of_interest.domain_name }}</td>
         <td>{{ coordinator.team.team_name }}</td>
 
@@ -182,6 +183,11 @@ tbody td:hover:before {
     {% endfor %}
   </tbody>
 </table>
+{% else %}
+<div class="non">
+    <h4>No QR has been Assigned</h4>
+</div>
+{% endif %}
 </div>
 <script>
 function searchTable() {
