--- a/templates/coordinator/success_check_in.html
+++ b/templates/coordinator/success_check_in.html
@@ -146,25 +146,26 @@ tbody td:hover:before {
 </div>
 {% endfor %}
         {% endif %}
+{% if coordinators %}
 <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for participants..." />
-<div class="filter-container">
-    <label for="teamFilter">Filter by Team:</label>
-    <select id="teamFilter" onchange="filterTable()">
-        <option value="all">All</option>
-        {% for t in teams %}
-        <option value="{{ t.team_name }}">{{ t.team_name }}</option>
-        {% endfor %}
-        <!-- Add more options as needed -->
-    </select>
-</div>
+{#<div class="filter-container">#}
+{#    <label for="teamFilter">Filter by Team:</label>#}
+{#    <select id="teamFilter" onchange="filterTable()">#}
+{#        <option value="all">All</option>#}
+{#        {% for t in teams %}#}
+{#        <option value="{{ t.team_name }}">{{ t.team_name }}</option>#}
+{#        {% endfor %}#}
+{#        <!-- Add more options as needed -->#}
+{#    </select>#}
+{#</div>#}
 <div class="container">
 <table>
   <thead>
     <tr>
+        <th>Participant ID</th>
       <th>Email</th>
       <th>First Name</th>
       <th>State</th>
-      <th>College</th>
       <th>Domain</th>
       <th>Team Name</th>
         <th>Status</th>
@@ -175,10 +176,10 @@ tbody td:hover:before {
   <tbody>
     {% for coordinator in coordinators %}
     <tr>
+        <td>{{ coordinator.participant_id }}</td>
       <td>{{ coordinator.email }}</td>
       <td>{{ coordinator.first_name }}</td>
         <td>{{ coordinator.state }}</td>
-        <td>{{ coordinator.college }}</td>
         <td>{{ coordinator.domain_of_interest.domain_name }}</td>
         <td>{{ coordinator.team.team_name }}</td>
 
@@ -191,6 +192,11 @@ tbody td:hover:before {
     {% endfor %}
   </tbody>
 </table>
+{% else %}
+<div class="non">
+    <h4>No Participant has Checked in.</h4>
+</div>
+{% endif %}
 </div>
 <script>
 function searchTable() {
